Make cursor highlighting feature work across multiple displays

BUG=654221

Review-Url: https://codereview.chromium.org/2432583002
Cr-Commit-Position: refs/heads/master@{#427127}

Former-commit-id: d56bc78fd0f1da9f50db4f0fcc48ec3d7c670c8b